--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -2450,14 +2450,14 @@ body {
     .navbar-brand {
       &:focus, &:hover {
         /* background: #3385FF; */
-        background-image: url('../assets/img/landing/brand-background.png');
         color: #fff;
       }
       color: #fff;
       height: auto;
       display: block;
       font-size: 14px;
-      background: #3385FF;
+      /* background: #3385FF; */
+      background-image: url('../assets/img/landing/brand-background.png');
       padding: 15px 20px;
       border-radius: 0 0 5px 5px;
       font-weight: 700;
