--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -61,4 +61,16 @@
             <p><span data-i18n="about_me.des">{{ site.author.desc }}</span></p>
         </div>
     </div>
+    <!--div class="row"-->
+        <!-- team members -->
+        <!--{% for icon in site.author.skill_icon1 %}
+        <div class="col-xs-2 wow fadeInLeft">
+            <div class="team-member">
+                <div class="vote-icon">
+                    <i class="fa {{ icon.name }}"></i>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+     </div>-->
 </div>
